...
                            <color key="backgroundColor" name="info"/>
                            <constraints>
                                <constraint firstAttribute="height" constant="48" id="v3F-2U-4OH"/>
                            </constraints>
                            <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                            <inset key="titleEdgeInsets" minX="0.0" minY="0.0" maxX="0.0" maxY="4"/>
                            <state key="normal" title="OK"/>
                        </button>
                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="F8n-2C-jAt">
                            <rect key="frame" x="50" y="128" width="30" height="30"/>
                            <accessibility key="accessibilityConfiguration" identifier="checkbox_button"/>
                            <constraints>
                                <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="30" id="5E1-Bm-IR8"/>
                                <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="30" id="mxw-eN-629"/>
                                <constraint firstAttribute="width" constant="30" id="oom-f5-0ba"/>
                                <constraint firstAttribute="height" constant="30" id="spu-ks-cd9"/>
                            </constraints>
...
