...
                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FqP-zv-gPa">
                            <rect key="frame" x="0.0" y="101" width="334" height="45"/>
                            <constraints>
                                <constraint firstAttribute="height" constant="45" id="Xsc-KI-Ziv"/>
                            </constraints>
                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
                            <state key="normal" title="Ok">
                                <color key="titleColor" systemColor="darkTextColor"/>
                            </state>
                        </button>
                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jeH-3L-sbB">
                            <rect key="frame" x="0.0" y="147" width="334" height="45"/>
                            <constraints>
                                <constraint firstAttribute="height" constant="45" id="k8L-0s-T58"/>
                            </constraints>
                            <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
                            <state key="normal" title="Cancel">
                                <color key="titleColor" name="error"/>
                            </state>
                        </button>
                    </subviews>
                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                    <constraints>
...
