...
                            <color key="backgroundColor" name="info"/>
                            <constraints>
                                <constraint firstAttribute="height" constant="48" id="e2U-1c-hUx"/>
                                <constraint firstAttribute="width" constant="274" id="zGc-mE-uKd"/>
                            </constraints>
                            <fontDescription key="fontDescription" type="boldSystem" pointSize="19"/>
                            <state key="normal" title="SEND"/>
                        </button>
                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Insert text here..." textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="c9M-VN-NWA">
                            <rect key="frame" x="30" y="85.5" width="255" height="40"/>
                            <color key="backgroundColor" red="0.90196078431372551" green="0.90196078431372551" blue="0.90196078431372551" alpha="1" colorSpace="calibratedRGB"/>
                            <constraints>
                                <constraint firstAttribute="height" constant="40" id="Ya2-nz-c9A"/>
...
                        <constraint firstItem="c9M-VN-NWA" firstAttribute="centerX" secondItem="qB0-aB-Ikj" secondAttribute="centerX" id="pgc-lQ-jSY"/>
                        <constraint firstItem="0iM-6i-s17" firstAttribute="trailing" secondItem="c9M-VN-NWA" secondAttribute="trailing" id="sg0-T3-L53"/>
                    </constraints>
                </view>
                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MEh-io-Rn7" customClass="PMButton" customModule="HermesAlert" customModuleProvider="target">
                    <rect key="frame" x="319" y="196.5" width="50" height="50"/>
                    <accessibility key="accessibilityConfiguration" identifier="textfield_close_button"/>
                    <constraints>
                        <constraint firstAttribute="width" constant="50" id="DJ0-J1-69n"/>
                        <constraint firstAttribute="width" secondItem="MEh-io-Rn7" secondAttribute="height" multiplier="1:1" id="FBq-gN-UEO"/>
                    </constraints>
                    <state key="normal" image="close">
                        <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
